// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsDevopsPage 组件 demo 测试 正确渲染 MsDevopsPage actions.tsx 1`] = `
<div>
  <div>
    <div
      class="ms-devops-page-container"
    >
      <div
        class="ms-devops-page-title"
      >
        <div
          class="ms-devops-page-left"
        >
          <div
            class="ms-devops-page-back"
          >
            <span
              class="anticon"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  xlink:href="#icon-fanhui"
                />
              </svg>
            </span>
          </div>
          配置extra操作区
        </div>
        <div
          class="ms-devops-page-right"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ms-actions"
          >
            <div
              class="ant-space-item"
              style="margin-right: 0px;"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-sm ant-btn-block"
                label="操作1"
                style="padding: 0px; text-align: left;"
                type="button"
              >
                <span>
                  操作1
                </span>
              </button>
            </div>
            <span
              class="ant-space-item-split"
              style="margin-right: 0px;"
            >
              <div
                class="ant-divider ant-divider-vertical"
                role="separator"
              />
            </span>
            <div
              class="ant-space-item"
              style="margin-right: 0px;"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-sm ant-btn-block"
                label="操作2"
                style="padding: 0px; text-align: left;"
                type="button"
              >
                <span>
                  操作2
                </span>
              </button>
            </div>
            <span
              class="ant-space-item-split"
              style="margin-right: 0px;"
            >
              <div
                class="ant-divider ant-divider-vertical"
                role="separator"
              />
            </span>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-link ant-btn-sm ant-btn-block ant-dropdown-trigger ms-dropdown"
                style="padding: 0px; text-align: left;"
                type="button"
              >
                <span>
                  <span>
                    更多
                  </span>
                  <span
                    class="anticon"
                    role="img"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ms-devops-page-children-wrap"
      >
        <div>
          我是页面
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsDevopsPage 组件 demo 测试 正确渲染 MsDevopsPage basic.tsx 1`] = `
<div>
  <div>
    <div
      class="ms-devops-page-container"
    >
      <div
        class="ms-devops-page-title"
      >
        <div
          class="ms-devops-page-left"
        >
          <div
            class="ms-devops-page-back"
          >
            <span
              class="anticon"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  xlink:href="#icon-fanhui"
                />
              </svg>
            </span>
          </div>
          部分属性说明
        </div>
        <div
          class="ms-devops-page-right"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ms-actions"
          />
        </div>
      </div>
      <div
        class="ms-devops-page-children-wrap"
      >
        <div>
          我是页面
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsDevopsPage 组件 demo 测试 正确渲染 MsDevopsPage extra.tsx 1`] = `
<div>
  <div>
    <div
      class="ms-devops-page-container"
    >
      <div
        class="ms-devops-page-title"
      >
        <div
          class="ms-devops-page-left"
        >
          <div
            class="ms-devops-page-back"
          >
            <span
              class="anticon"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  xlink:href="#icon-fanhui"
                />
              </svg>
            </span>
          </div>
          自定义操作区
        </div>
        <div
          class="ms-devops-page-right"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
            style="cursor: pointer; font-size: 12px; color: rgb(16, 111, 251);"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <span
                aria-label="sync"
                class="anticon anticon-sync"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="sync"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              刷新
            </div>
          </div>
        </div>
      </div>
      <div
        class="ms-devops-page-children-wrap"
      >
        <div>
          我是页面
        </div>
      </div>
    </div>
  </div>
</div>
`;
